[MODINVOICE-600]. Improve handling of cross-funds invoice payments with adjustments (#551)
* [MODINVOICE-600]. Improve handling of cross-funds invoice payments with adjustments

* [MODINVOICE-600]. Apply minor changes

* [MODINVOICE-600]. Rename a function